--- a/ProbStat/TemiEsame/Esempio/esempio.ipynb
+++ b/ProbStat/TemiEsame/Esempio/esempio.ipynb
@@ -5,7 +5,7 @@
    "id": "6b15b132-6ece-4f31-8c9c-9a244ade9e2c",
    "metadata": {},
    "source": [
-    "**EXAM EXAMPLE**"
+    "**EXAM EXAMPLE (sistema grafici e unità di misura !!!!!!)**"
    ]
   },
   {
