Trying to fix Git

--- a/ProbStat/TemiEsame/Esempio/esempio.ipynb
+++ b/ProbStat/TemiEsame/Esempio/esempio.ipynb
@@ -20,7 +20,6 @@
     "#Import the useful packages\n",
     "import pandas as pd \n",
     "import numpy as np \n",
-    "import scipy.stats as levy\n",
     "import scipy\n",
     "import seaborn as sns \n",
     "import matplotlib.pyplot as plt\n",
@@ -105,7 +104,7 @@
    "metadata": {},
    "source": [
     "*The graph above shows that the distributions seem not to be Gaussian-like given the strong presence \n",
-    "of outliers. It could be more useful either to show the boxplots without the outliers or to plot the histograms.*"
+    "of outliers. It could be more useful either to show the boxplots without the outliers or plot the histograms.*"
    ]
   },
   {
@@ -438,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    df = df.drop(['last_review'], axis=1)"
+    "df = df.drop(['last_review'], axis=1)"
    ]
   },
   {
